// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space home Welcome react component when new user should match snapshot 1`] = `
<div>
  <section
    className="home-section"
  >
    <h2
      className="home-section__heading"
      data-test-id="greeting"
    >
      Welcome, Test
    </h2>
    <p
      data-test-id="new-user-msg"
    >
      Looks like you’re new here. Learn more about Contentful from the resources below.
    </p>
    <span
      data-test-id="link-to-sdk-and-tools-section"
    >
      Get started with content creation in your space or get 
      <a
        onClick={[Function]}
      >
        SDKs, tools & tutorials below
      </a>
      .
    </span>
    <Icon
      className="home__welcome-image"
      name="home-welcome"
      scale="1.0"
    />
  </section>
</div>
`;

exports[`Space home Welcome react component when no user should match snapshot 1`] = `
<div>
  <section
    className="home-section"
  >
    <h2
      className="home-section__heading"
      data-test-id="greeting"
    >
      Welcome
    </h2>
    <span
      data-test-id="link-to-sdk-and-tools-section"
    >
      Get started with content creation in your space or get 
      <a
        onClick={[Function]}
      >
        SDKs, tools & tutorials below
      </a>
      .
    </span>
    <Icon
      className="home__welcome-image"
      name="home-welcome"
      scale="1.0"
    />
  </section>
</div>
`;

exports[`Space home Welcome react component when old user should match snapshot 1`] = `
<div>
  <section
    className="home-section"
  >
    <h2
      className="home-section__heading"
      data-test-id="greeting"
    >
      Good morning, Test.
    </h2>
    <p
      data-test-id="old-user-msg"
    >
      What will you build today?
    </p>
    <span
      data-test-id="link-to-sdk-and-tools-section"
    >
      Get started with content creation in your space or get 
      <a
        onClick={[Function]}
      >
        SDKs, tools & tutorials below
      </a>
      .
    </span>
    <Icon
      className="home__welcome-image"
      name="home-welcome"
      scale="1.0"
    />
  </section>
</div>
`;
